# cookiecutter-my-lab-to-nwb-template

./: README.md  cookiecutter.json
.github/workflows/: pre-commit-post-merge.yml
hooks/: pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  requirements.txt  setup.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/my_first_conversion/: ecephys_dataset_metadata.yaml  myecephysdatasetnwbconverter.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/{{cookiecutter.conversion_name}}/: {{cookiecutter.conversion_name}}_environment.yaml  {{cookiecutter.conversion_name}}behaviorinterface.py  {{cookiecutter.conversion_name}}convert_script.py
{{cookiecutter.project}}/: README.md  make_env.yml  requirements.txt  setup.py
{{cookiecutter.project}}/.github/workflows/: test-install.yml
{{cookiecutter.project}}/src/{{cookiecutter.project_slug}}/{{cookiecutter.conversion_name}}/: __init__.py  {{cookiecutter.conversion_name}}_environment.yaml  {{cookiecutter.conversion_name}}_metadata.yaml  {{cookiecutter.conversion_name}}_metadata.yml  {{cookiecutter.conversion_name}}_requirements.txt  {{cookiecutter.conversion_name}}behaviorinterface.py  {{cookiecutter.conversion_name}}convert_script.py  {{cookiecutter.conversion_name}}nwbconverter.py
{{cookiecutter.repo_name}}/: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  freeze_dependencies.py  make_env.yml  pyproject.toml  requirements.txt  setup.py
{{cookiecutter.repo_name}}/.github/workflows/: add-to-dashboard.yml  auto-publish.yml  test-install.yml
{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name_slug}}/{{cookiecutter.conversion_name}}/: __init__.py  behaviorinterface.py  convert_all_sessions.py  convert_session.py  metadata.yaml  notes.md  nwbconverter.py  requirements.txt  {{cookiecutter.conversion_name}}_behaviorinterface.py  {{cookiecutter.conversion_name}}_convert_all_sessions.py  {{cookiecutter.conversion_name}}_convert_script.py  {{cookiecutter.conversion_name}}_convert_session.py  {{cookiecutter.conversion_name}}_metadata.yaml  {{cookiecutter.conversion_name}}_nwbconverter.py  {{cookiecutter.conversion_name}}behaviorinterface.py  {{cookiecutter.conversion_name}}nwbconverter.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name_slug}}/{{cookiecutter.conversion_name}}/interfaces/: __init__.py
